--- a/Readme
+++ b/Readme
@@ -1,7 +1,22 @@
 
-Programs written for Craft of Software Engineeing tasks
+Craft of Software Engineeing:
 
-1. Prime Factors - Finding prime factors of any number
+Code for Data structures, algorithms, and problems - all in Java. 
+
+### Sections
+
+## Programming Katas
+1. Prime Factors - Finding prime factors of any number > http://craftsmanship.sv.cmu.edu/katas/prime-factors-kata
 2. Weighing With Stones Kata - A stone weighing 40 pounds is broken into 4 pieces such that with those four pieces, you can now  measure any weight between one and forty pounds.
-The question is: how much do these four individual pieces weigh?
+The question is: how much do these four individual pieces weigh? > http://craftsmanship.sv.cmu.edu/katas/weighing-with-stones-kata 
+3. Potter Kata > http://craftsmanship.sv.cmu.edu/exercises/potter-kata
+4. Mars Rover > http://craftsmanship.sv.cmu.edu/katas/mars-rover-kata
 
+## Data Structures
+Implement data structures like linked lists and trees and the associated methods for working with these data structures.
+
+## Algorithms
+Some problems implemented using the data structures. 
+
+## 100Q
+Solutions to several problems. 
